TestSuite/errors/err0374_IntPtrVar.pas
uses System;

procedure p1(var a: IntPtr);
begin
end;   

begin
  p1(IntPtr.Zero);
end.